# fullstack-movie-streaming-platform

./: .example.env  .gitignore  Cargo.toml  README.md  aws_content_workflow.yaml  aws_vod_temp.yaml  docker-compose-pipeline.yml  docker-compose.override.yml  docker-compose.yaml  dump.rdb
.github/workflows/: rust.yml
.metals/: metals.lock.db  metals.mv.db
Notes/: README.MD
[DEPRECATED]apollo_gateway/: index.js  package-lock.json  package.json
[DEPRECATED]recommendation_service/: .gitignore  build.sbt
[DEPRECATED]recommendation_service/.bsp/: sbt.json
[DEPRECATED]recommendation_service/.metals/: metals.mv.db
[DEPRECATED]recommendation_service/src/main/scala/: PrepareData.scala  RecommendMovie.scala
account_service/: .example.env  Cargo.toml  Dockerfile  README.md  account_service.graphql  docker-compose.yml  dump.rdb  sqlx-data.json
account_service/migrations/: 20220522065546_user_test.sql
account_service/src/: db.rs  lib.rs  main.rs  redis.rs  server.rs
account_service/src/graphql/: config.rs  mod.rs  root_schema.rs  utils.rs
account_service/src/graphql/profile_module/: mod.rs  model.rs  resolvers.rs  schema.rs
account_service/src/graphql/user_module/: mod.rs  model.rs  resolver.rs  schema.rs
activity_tracker/: .example.env  Cargo.toml  Dockerfile  activity_tracker.graphql
activity_tracker/src/: db.rs  kafka.rs  lib.rs  main.rs  server.rs
activity_tracker/src/graphql/: config.rs  root_schema.rs
activity_tracker/src/graphql/modules/: mod.rs  model.rs  resolver.rs  schema.rs
apollo-router/: .example.env  Dockerfile  docker-compose.yaml  router.yaml  supergraph.graphql  supergraph.yaml
app/: .example.env.local  .gitignore  apollo-client.ts  build.css  firebase.ts  typings.d.ts
app/atoms/: model.ts
app/components/: banner.tsx  col.tsx  filter_menu.tsx  filterby.tsx  genre_filter.tsx  header.tsx  loader.tsx  menu.tsx  model.tsx  plans.tsx  row.tsx  search_results_thumbnail.tsx  table.tsx  thumbnail.tsx  user_memsbership.tsx  video_player.tsx
app/global_dependencies/: constants.ts
app/hooks/: useAuth.tsx  useSubscription.tsx  use_list.tsx
app/lib/: stripe.ts
app/pages/: _app.tsx  account.tsx  content_creator.tsx  index.tsx  login.tsx  search.tsx  signup.tsx
app/pages/api/: s3-upload.ts  video.ts
app/pages/videos/: [id].tsx
app/styles/: globals.css
app/utils/: filtered_query.ts  request.ts  search_result.ts  sort_by_query.ts
asset_ingestion_service/: .example.env  Cargo.toml  Dockerfile  asset_ingestion_service.graphql  dump.rdb  queries.cql  views.cql
asset_ingestion_service/src/: db.rs  lib.rs  main.rs  server.rs
asset_ingestion_service/src/graphql/: config.rs  root_schema.rs
asset_ingestion_service/src/graphql/modules/types/: mod.rs  tmdb_test.rs
asset_ingestion_service/src/graphql/modules/types/movies/: mod.rs  model.rs  resolver.rs  schema.rs
asset_ingestion_service/src/graphql/modules/types/people_module/: model.rs  resolver.rs  schema.rs
asset_ingestion_service/src/graphql/modules/types/prod_company/: mod.rs  model.rs  resolver.rs  schema.rs
asset_service/: .example.env  Cargo.toml  Dockerfile  asset_service.graphql
asset_service/src/: kafka.rs  lib.rs  main.rs  server.rs  telemetry.rs
asset_service/src/graphql/: config.rs  root_schema.rs
asset_service/src/graphql/modules/: model.rs  resolver.rs  schema.rs
common_utils/: Cargo.toml
common_utils/src/: error.rs  lib.rs
kafka_search_ingest/: .example.env  .gitignore  Cargo.toml  Dockerfile
kafka_search_ingest/src/: db.rs  kafka_dualwrites.rs  lib.rs  main.rs  server.rs
kafka_search_ingest/src/module/: model.rs
products/: .example.env  .gitignore  Cargo.toml  Dockerfile  dump.rdb  products.graphql
products/migrations/2022-04-27-002739_product/: down.sql  up.sql
products/migrations/2022-05-02-030814_addditional_product_details/: down.sql  up.sql
products/src/: lib.rs  main.rs  redis.rs  schema.rs  server.rs
products/src/graphql/: config.rs  root_schema.rs
products/src/graphql/modules/: model.rs  resolver.rs  schema.rs
recommendation_service/: .example.env  Cargo.toml  Dockerfile  recommendation_service.graphql
recommendation_service/src/: db.rs  lib.rs  main.rs  server.rs
recommendation_service/src/graphql/: config.rs  root_schema.rs
recommendation_service/src/graphql/modules/: model.rs  resolver.rs  schema.rs
search_service/: .example.env  Cargo.toml  Dockerfile  search_service.graphql
search_service/src/: db.rs  lib.rs  main.rs  server.rs
search_service/src/graphql/: config.rs  root_schema.rs
search_service/src/graphql/modules/: model.rs  resolver.rs  schema.rs
template/: .example.env  Cargo.toml
template/src/: db.rs  lib.rs  main.rs  server.rs
template/src/graphql/: config.rs  mod.rs  root_schema.rs
tensorflow_consumer/: .example.env  Cargo.toml  Dockerfile  queries.cql
tensorflow_consumer/src/: db.rs  kafka.rs  lib.rs  main.rs  server.rs
tensorflow_consumer/src/modules/: model.rs
tensorflow_ml/: Dockerfile  README.md  movei_retrieval.ipynb  movie_retrievals.py  requirements.txt  server.py
