[package]
name = "activity_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-lab = "0.16.4"
actix-cors = "0.6"
async-graphql = { version = "4.0.4", features = ["apollo_tracing"] }
async-graphql-actix-web = "4.0.4"
env_logger = "0.9"
log = "0.4"
slab = "0.4.2"
dotenv = "0.15.0"
failure = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
once_cell = "1.12.0"
async-trait = "0.1.56"
common_utils = { path= "../common_utils" }
futures = "0.3.21"
tokio = "1.19.0"


# kafka - Message broker
rdkafka = { version = "0.28.0", features = ["cmake-build"] }

# Influx DB Client 
influx_db_client = { version = "0.5.1", default-features = false, features = ["rustls-tls"] }

# I COULDNOT GE THIS CLIENT TO WORK 
# influxdb_iox_client = { git = "https://github.com/influxdata/influxdb_iox.git", features = ["flight", "format", "write_lp"] }
# workspace-hack = { git = "https://github.com/influxdata/influxdb_iox.git"}
# arrow = { version = "18.0.0", features = ["prettyprint"] }
# arrow_util = {git = "https://github.com/influxdata/influxdb_iox.git" }
# bytes = "1.2"
# rand = "0.8.3"
# generated_types = { git = "https://github.com/influxdata/influxdb_iox.git" }
# tracing = { version = "0.1", features = ["attributes", "log", "max_level_trace", "release_max_level_trace", "std", "tracing-attributes"] }
# tracing-core = { version = "0.1", features = ["lazy_static", "std"] }
# tracing-log = { version = "0.1", features = ["log-tracer", "std", "trace-logger"] }
# tracing-subscriber = { version = "0.3", features = ["alloc", "ansi", "ansi_term", "env-filter", "fmt", "json", "lazy_static", "matchers", "parking_lot", "regex", "registry", "serde", "serde_json", "sharded-slab", "smallvec", "std", "thread_local", "tracing", "tracing-log", "tracing-serde"] }
# uuid = { version = "1", features = ["private_getrandom", "rng", "std", "v4"] }
# zstd = { version = "0.11", features = ["arrays", "legacy", "zdict_builder"] }
# observability_deps = { git = "https://github.com/influxdata/influxdb_iox.git" }

## Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3.2"

## Open Telemetry/ Prometheus
opentelemetry = { version = "0.17.0", features = ["metrics", "tokio"] } 
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_17"]}
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.17.3"
actix-web-opentelemetry = "0.12.0"
prometheus = "0.13.1"
async_graphql_telemetry_extension = { git = "https://github.com/naamancurtis/async_graphql_telemetry_extension", branch = "main" }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
parking_lot = "0.12.1"
url = "2.2.2"
scylla = "0.4.7"
thiserror = "1.0.31"
serde_db = "0.11.0"
serde_tuple = "0.5.0"

[profile.release]
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Optimization for size ( most aggressive )
opt-level = 'z'
# Link time optimization using using whole-program analysis
lto = true
debug =true
