[package]
name = "common_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
async-graphql = { version = "4.0.0", features = ["apollo_tracing"] }
async-graphql-actix-web = "4.0.0"
diesel = "1.4.8"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
serde = "1.0.136"
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1.0.30"
derive_more = "0.99.17"
serde_json = "1.0"
sqlx = { version = "0.5.13", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline", "json"] }
rust-argon2 = "1.0.0"
rand = "0.8.3"
rand_chacha = "0.3.0"
tracing = "0.1"
tokio = { version = "1.19.1", features = ["full"] }
rs-snowflake = "0.6.0"
parking_lot = "0.12.1"
serial_int = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
