[package]
name = "kafka_search_ingest"
version = "0.1.0"
edition = "2021"


[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-lab = "0.16.1"
actix-cors = "0.6"
# async-graphql = { version = "4.0.4", features = ["apollo_tracing", "tracing", "chrono", "uuid", "password-strength-validator", "dataloader"] }
# async-graphql-actix-web = "4.0.4"
# async-graphql-parser = "4.0.4"
env_logger = "0.9"
log = "0.4"
slab = "0.4.2"
dotenv = "0.15.0"
failure = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
once_cell = "1.12.0"
common_utils = { path= "../common_utils" }
futures = "0.3.21"
async-trait = "0.1.56"
async-stream = "0.3.3"
parking_lot = "0.12.1"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "time"] }
# futures-timer = "3.0.2"
# futures-util = "0.3.0"
# futures-channel = "0.3.0"

# kafka - Message broker
rdkafka = { version = "0.28.0", features = ["cmake-build"] }

# elasticsearch 
elasticsearch = { git = "https://github.com/elastic/elasticsearch-rs", version="8.0.0-alpha.1", features = ["native-tls", "rustls-tls"] }
url = "2.2.2"

## Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3.2"

## Open Telemetry/ Prometheus
opentelemetry = { version = "0.17.0", features = ["metrics", "tokio"] } 
tracing-actix-web = { version = "0.5", features = ["opentelemetry_0_17"]}
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.17.3"
actix-web-opentelemetry = "0.12.0"
prometheus = "0.13.1"
async_graphql_telemetry_extension = { git = "https://github.com/naamancurtis/async_graphql_telemetry_extension", branch = "main" }
