[package]
name = "products"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-lab = "0.16.4"
actix-cors = "0.6"
async-graphql = { version = "4.0.5", features = ["apollo_tracing", "tracing", "chrono", "uuid"] }
async-graphql-actix-web = "4.0.5"
env_logger = "0.9"
log = "0.4"
slab = "0.4.2"
diesel = { version = "1.4.8", features = ["postgres", "uuid", "r2d2", "chrono", "numeric"] }
dotenv = "0.15.0"
failure = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel_migrations = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
common_utils = {path = "../common_utils"}
futures = "0.3.21"
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }
derive_more = "0.99.17"
lazy_static = "1.4.0"
