[package]
name = "search_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-lab = "0.16.1"
actix-cors = "0.6.1"
async-graphql = { version = "4.0.4", features = ["apollo_tracing", "tracing", "chrono", "uuid", "password-strength-validator"] }
async-graphql-actix-web = "4.0.4"
async-graphql-parser = "4.0.4"
env_logger = "0.9"
log = "0.4"
slab = "0.4.2"
dotenv = "0.15.0"
failure = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
url = "2.2.2"
once_cell = "1.12.0"
async-trait = "0.1.56"
common_utils = { path= "../common_utils" }

# Elasticsearch 
elasticsearch = { git = "https://github.com/elastic/elasticsearch-rs", version="8.0.0-alpha.1" }

## Logging
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3.2"

## Open Telemetry/ Prometheus
opentelemetry = { version = "0.17.0", features = ["metrics", "tokio"] } 
tracing-actix-web = { version = "0.5", features = ["opentelemetry_0_17"]}
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.17.3"
actix-web-opentelemetry = "0.12.0"
prometheus = "0.13.1"
