[package]
name = "tensorflow_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-lab = "0.16.1"
actix-cors = "0.6"
async-graphql = { version = "4.0.1", features = ["apollo_tracing", "tracing", "chrono", "uuid", "password-strength-validator"] }
async-graphql-actix-web = "4.0.1"
async-graphql-parser = "4.0.0"
env_logger = "0.9"
log = "0.4"
slab = "0.4.2"
dotenv = "0.15.0"
failure = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
scylla = "0.4.5"
lazy_static = "1.4.0"
toml = "0.5.9"
tokio = "1.19.0"
futures = "0.3.21"
strum = "0.24.0"
strum_macros = "0.24.0"
once_cell = "1.12.0"
anyhow = "1.0.57"
async-trait = "0.1.56"
common_utils = { path= "../common_utils" }

# shortcuts for assigning default values
smart-default = "0.6.0"
derivative = "2.2.0"

# kafka - Message broker
rdkafka = { version = "0.28.0", features = ["cmake-build"] }

## Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3.2"

## Open Telemetry/ Prometheus
opentelemetry = { version = "0.17.0", features = ["metrics", "tokio"] } 
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_17"]}
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.17.3"
actix-web-opentelemetry = "0.12.0"
prometheus = "0.13.1"
async_graphql_telemetry_extension = { git = "https://github.com/naamancurtis/async_graphql_telemetry_extension", branch = "main" }

[profile.release]
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Optimization for size ( most aggressive )
opt-level = 'z'
# Link time optimization using using whole-program analysis
lto = true
debug =true